--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -20,9 +20,9 @@ title                    : "Pub YES!!"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "RWOT Index Test"
-url                      : "https://infominer.id" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/pub-yes" # the subpath of your site, e.g. "/blog"
-repository               : "infominer33/pub-yes" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://decentralized-id.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/rwot-dir" # the subpath of your site, e.g. "/blog"
+repository               : "didecentral/rwot-dir" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -287,11 +287,14 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
       share: true
       related: true
+      sidebar:
+        title: "Rebooting the Web of Trust"
+        nav: "rwotnav"
