--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description              : "RWOT Index Test"
 url                      : "https://decentralized-id.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/rwot-dir" # the subpath of your site, e.g. "/blog"
 repository               : "didecentral/rwot-dir" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+github                   : [metadata]
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -231,8 +232,8 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jemoji
-  - jekyll-include-cache
   - jekyll-redirect-from
+  - jekyll-data
 
 # mimic GitHub Pages with --safe
 whitelist:
