--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "
 destination: docs
 # Site Settings
 locale                   : "en-US"
-title                    : "Pub YES!!"
+title                    : "Rebooting the Web of Trust"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "RWOT Index Test"
+name                     : "DIDecentral"
+description              : "RWOT Index - Drafts, Documents, Photos, Topics, Advance Readings, and Final Whitepapers"
 url                      : "https://decentralized-id.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/rwot-dir" # the subpath of your site, e.g. "/blog"
 repository               : "didecentral/rwot-dir" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 github                   : [metadata]
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+logo                     : /assets/images/wot-logo.png
+masthead_title           : Drafts, Documents, Literature
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
