--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true # true, false (default)
-search_full_content      : # true, false (default)
+search_full_content      : # false (default)
 search_provider          : lunr # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "DIDecentral"
   avatar           : https://didecentral.com/assets/images/did-square.png
-  bio              : "Open Source, Public Domain, Educational UnOrganization"
+  bio              : "Open Source, Public Domain, Educational Co-Creation"
   location         : "Curating the Web"
   links:
     - label: "Email"
